@@ -7,3 +7,14 @@ This project is a JavaFX application
 - Java Development Kit (JDK) 11 or higher
 - JavaFX SDK 11 or higher
 - JavaFX User Library Jars
+
+
+
+
+
+--module-path "D:\javafx-sdk-17.0.13\lib" --add-modules javafx.controls,javafx.fxml
+--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-exports javafx.base/com.sun.javafx.runtime=ALL-UNNAMED
+--add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
+--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED
